Day12/Day_12/.metadata/.plugins/org.eclipse.cdt.ui/Day_12.12.build.log
20:09:42 **** Incremental Build of configuration Debug for project Day_12.12 ****
make all 
Building file: ../src/Main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Main.d" -MT"src/Main.o" -o "src/Main.o" "../src/Main.cpp"
../src/Main.cpp:49:7: error: no member named 'num3' in 'A'
        ptr->num3 = 30; //OK
        ~~~  ^
1 error generated.
make: *** [src/Main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

20:09:44 Build Failed. 2 errors, 0 warnings. (took 1s.785ms)

